# Double-Click

./: .gitignore  main.py  marketing_campaign.csv
double_click_crew/: README.md  pyproject.toml
double_click_crew/db/704703c8-2554-4aeb-8089-6d2a53481f22/: index_metadata.pickle
double_click_crew/outputs/: most_amount_of_wine.md  report.md
double_click_crew/src/double_click_crew/: crew.py  main.py
double_click_crew/src/double_click_crew/config/: agents.yaml  tasks.yaml
