[project]
name = "double_click_crew"
version = "0.1.0"
description = "double-click-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
double_click_crew = "double_click_crew.main:run"
run_crew = "double_click_crew.main:run"
train = "double_click_crew.main:train"
replay = "double_click_crew.main:replay"
test = "double_click_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
